--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -2,43 +2,43 @@ l_english:
 
 ### Ideas ###
 MAF_Colonial_Nation:0 "식민지 정부"
-MAF_Colonial_Nation_desc:0 "Despite its very limited autonomy in dealings with African neighbours, such as Somalia, Mittelafrika is a colony; its entire state apparatus hinging on and mantained by German power, a budget prepared in Berlin, and its currency pegged to the German Mark."
+MAF_Colonial_Nation_desc:0 "소말리아 같은 아프리카의 이웃 국가와 비교해봐도 매우 제한적 자치 정도를 지니기는 했지만, 중앙아프리카는 식민지입니다; 전체적 정부 조직체는 독일 권력에 의해 조직되고 유지되며, 베를린에서 에산안이 준비되며, 화폐는 독일 마르크로 정해져 있습니다."
 MAF_British_Influence:0 "영국의 영향"
 MAF_Strong_British_Influence:0 "강력한 영국의 영향"
 MAF_British_Condominium:0 "영국 공동통치"
-MAF_Flandro-Wallonian_Influence:0 "Flandro-Wallonian Influence"
-MAF_Strong_Flandro-Wallonian_Influence:0 "Strong Flandro-Wallonian Influence"
-MAF_Flandro-Wallonian_Condominium:0 "Flandro-Wallonian Condominium"
-MAF_Legal_Chaos:0 "Legal Chaos"
-MAF_Secular_Education:0 "Secular Education System"
-MAF_Cash_Crops_idea:0 "Cash Crops"
-MAF_Good_Supply:0 "Efficient Supply Usage"
-MAF_Honorary_Officers_idea:0 "Honorary Officers"
+MAF_Flandro-Wallonian_Influence:0 "플랑드르-왈로니아의 영향"
+MAF_Strong_Flandro-Wallonian_Influence:0 "강력한 플랑드르-왈로니아의 영향"
+MAF_Flandro-Wallonian_Condominium:0 "플랑드르-왈로니아 공동통치"
+MAF_Legal_Chaos:0 "사법적 혼란"
+MAF_Secular_Education:0 "세속적 교육 체계"
+MAF_Cash_Crops_idea:0 "현금 작물"
+MAF_Good_Supply:0 "효율적 보급품 활용"
+MAF_Honorary_Officers_idea:0 "명예직 장교들"
 MAF_Protected1:0 "보호 경제"
 MAF_Protected2:0 "보호 경제"
 MAF_Protected3:0 "보호 경제"
 MAF_Anglo_Volunteers1:0 "영국 자원병"
 MAF_Anglo_Volunteers2:0 "영국 자원병"
-MAF_Opium_Profit:0 "Opium Profit"
-MAF_Opium_Epidemic:0 "Opium Epidemic"
-MAF_Vorbeck_idea:0 "Spirit of von Lettow-Vorbeck"
-MAF_Landtag:0 "Afrikan Landtag"
-MAF_Black_Pilots:0 "African Pilots"
-MAF_Mercenary_Pilots:0 "Mercenary Pilots"
-MAF_CtC_Rail:0 "Cape to Cairo Railroad"
-MAF_Black_Monday_idea:0 "Budgetary Chaos"
-MAF_Black_Monday_1937:0 "1937 Budget"
-MAF_Black_Monday_1938:0 "1938 Budget"
-MAF_Black_Monday_1939:0 "1939 Budget"
-MAF_Post_War:0 "Post War Budget"
-MAF_African_Investments:0 "African Investments"
-MAF_Napalm_idea:0 "Napalm Bombings"
-MAF_Jungle:0 "Jungle Warfare Training"
-MAF_Nat_Buff:0 "Native Revolt"
-MAF_British_Settlers:0 "British Settlers"
-MAF_British_Settlers_desc:0 "British settlers within our territories have retained much of their pre-war influence due to the high amount of Weltkrieg veterans among their ranks. We will need to deal with them soon, as their current influence has a negative effect on our country."
-MAF_Belgian_Investors:0 "Flandro-Wallonian Investors"
-MAF_Belgian_Investors_desc:0 "Belgian investors within our territories have retained much of their pre-war influence due to the high amount of Belgian businesses and factories that remained after the Weltkrieg. We will need to deal with them soon, as their current influence has a negative effect on our country."
+MAF_Opium_Profit:0 "아편 수익"
+MAF_Opium_Epidemic:0 "아편 유행"
+MAF_Vorbeck_idea:0 "폰 레토프 포르벡의 유산"
+MAF_Landtag:0 "아프리카 주의회"
+MAF_Black_Pilots:0 "아프리카인 파일럿"
+MAF_Mercenary_Pilots:0 "용병 파일럿"
+MAF_CtC_Rail:0 "케이프-카이로 철도선"
+MAF_Black_Monday_idea:0 "예산안 혼돈"
+MAF_Black_Monday_1937:0 "1937 예산안"
+MAF_Black_Monday_1938:0 "1938 예산안"
+MAF_Black_Monday_1939:0 "1939 예산안"
+MAF_Post_War:0 "전후 예산안"
+MAF_African_Investments:0 "아프리카 투자"
+MAF_Napalm_idea:0 "네이팜 폭격"
+MAF_Jungle:0 "정글 전투 훈련"
+MAF_Nat_Buff:0 "원주민 반란"
+MAF_British_Settlers:0 "영국계 정착민"
+MAF_British_Settlers_desc:0 "우리 영토 내의 영국계 정착민들은 그들의 사회적 계급에 비해 많은 비중의 대전기 고참병의 비율 덕에 대전기 이전의 영향력을 대부분 보존하고 있다. 현재 그들의 영향력이 조국에 부정적 영향을 끼치고 있으므로, 우리는 근시일 내에 이들을 다뤄야 한다."
+MAF_Belgian_Investors:0 "플랑드르-왈로니아의 투자자들"
+MAF_Belgian_Investors_desc:0 "우리 영토 내의 벨기에 투자자들은 대전 이전의 높은 비율의 벨기에 연관 사업과 산업시설 덕에 대전기 이전의 영향력을 대부분 보존하고 있다. 현재 그들의 영향력이 조국에 부정적 영향을 끼치고 있으므로, 우리는 근시일 내에 이들을 다뤄야 한다."
 
 ### Parties ###
 MAF_totalist_party:0 "RAA"
@@ -73,92 +73,92 @@ MAF_DEM_paternal_autocrat_party:0 "AAP"
 MAF_DEM_paternal_autocrat_party_long:0 "Afrikanische Aktionspartei"
 
 ### Leader Descriptions ###
-POLITICS_GOERING_DESC:0 "Von Göring came to prominence as one of Germany's more succesful fighter pilots of the Weltkrieg, scoring more than twenty victories by the end of the war, which earned him numerous decorations. \n\nHis ambitions soon turned political with his becoming chair of the Alldeutsche Verband which he led to an 8% Electoral turnout in 1928. Following this, he was appointed to Mittelafrika by Wilhelm II himself who saw von Göring as a rising capable man. Von Göring sees this as a springboard and his ticket to claiming the chancellery after a successful term in the colonies."
+POLITICS_GOERING_DESC:0 "폰 괴링은 독일에서 대전기의 가장 성공적인 전투기 파일럿으로써, 종전시까지 20회가 넘는 승리를 통해 수많은 훈장을 얻음으로 명성을 얻었습니다. \n\n그의 야망은 곧 정치적으로 변화하였으며 곧 1928년 선거에서 8%의 득표율을 보인 Alldeutsche Verband의 수장이 되었습니다. 이로써,그는 빌헬름 2세의 눈에 괴링 자신이 떠오르는 능력있는 신예로 보이게 하였으며 자신을 중앙아프리카의 관리자로 임명되도록 하였습니다. 폰 괴링은 이를 자신의 도약대로 보았으며, 식민지에서의 임기를 성공적으로 마친 뒤에 수상 자리의 공천권을 요구하는 기회로 여기고 있습니다."
 
 ### Tooltips ###
-MAF_Sov:0 "The Souveränisten are in power"
-MAF_NKR:0 "The NKR are in power"
-MAF_DKG:0 "The DKG are in power"
-MAF_Ref:0 "The Reformgruppe are in power"
-MAF_noAnglos:0 "Anglos have been given self rule"
-MAF_SovState:0 "§RThis is not a path that we should lightly tread.§!"
-MAF_EndProc:0 "§RWe should expect significant revolts if we do this. Be warned!.§!"
-MAF_Autonomy:0 "This will make Mittelafrika into a nominal puppet of Germany, giving us greater autonomy"
+MAF_Sov:0 "Souveränisten이 권력을 잡다"
+MAF_NKR:0 "NKR이 권력을 잡다"
+MAF_DKG:0 "DKG이 권력을 잡다"
+MAF_Ref:0 "Reformgruppe이 권력을 잡다"
+MAF_noAnglos:0 "앵글로계인들이 자치권을 갖다"
+MAF_SovState:0 "§R이 계획은 가볍게 진행해서는 안된다.§!"
+MAF_EndProc:0 "§R이를 시행한다면 심각한 반란에 직면할 것이다. 조심하라!.§!"
+MAF_Autonomy:0 "이는 중앙아프리카를 명목상의 괴뢰국으로 만들 것이며, 우리에게 더욱 큰 자치권을 줄 것이다"
 
 ### Opinion Modifies ###
-MAF_Refused_Explain:0 "Portugal Refused to Stop Rebels"
+MAF_Refused_Explain:0 "포르투칼이 반군을 막는것을 거부하다"
 
 ### Events ###
-mittel.1.t:0 "The Mozambique situation"
-mittel.1.d:0 "During the Weltkrieg, the situation in Africa was truly paradoxical. The war in East Africa ended in a stalemate, where the Entente occupied German East Africa, while we occupied Mozambique. Both sides recruited thousands of Africans from 'enemy' territory as porters, armed guards or soldiers, and after the war we had to punish those who joined the Entente's side. Now, many of those natives are displaced across the Mozambique border and there are many rumours that the new extremist government in Portugal is planning to arm them against us."
-mittel.1.a:0 "We must prepare."
-mittel.2.t:0 "The Mozambique situation"
-mittel.2.d:0 "During the Weltkrieg, the situation in Africa was truly paradoxical. The war in East Africa ended in a stalemate, where the Entente occupied German East Africa, while the Germans occupied our Mozambique. Both sides recruited thousands of Africans from 'enemy' territory as porters, armed guards or soldiers, and after the war the Huns led cruel reprisal attacks on the natives that joined our side. Since then, thousands of those natives have fled over the border into Mozambique where they now live in camps. These natives are a good opportunity to sow mischief in Mittelafrika, as many of them still want revenge for what the Huns did to them."
-mittel.2.a:0 "Let's draw up a plan..."
-mittel.3.t:0 "A chance for mischief in our rightful territories"
-mittel.3.d:0 "There is a great opportunity for us to cause instability in Mittelafrika by arming angry displaced natives who live in camps in Mozambique. The more unstable Mittelafrika is, the better chance we have to retake our rightful territories shown in the Pink Map"
-mittel.3.a:0 "Arm them as much as we can"
-mittel.3.b:0 "Arm them with guns and ammo, but nothing else."
-mittel.3.c:0 "Crack down on these hooligans"
-mittel.4.t:0 "A Police Officer has been Shot!"
-mittel.4.d:0 "A Makonde tribesman has shot one of our police officers in Lusaka! The city is still in shock and the perpetrator, along with any supporters, is now being detained for investigation by the local police. It has been theorised that he had acquired the weapons from across the border, in Portugal's colonies."
-mittel.4.a:0 "Terrible!"
-mittel.5.t:0 "Another Police Officer has been Shot!"
-mittel.5.d:0 "Another Policeman, this time from Lilongwe, has been shot by a radicalised native, who is a member of the Makonde tribe. The cause of his radicalisation and the source of his weapons are still being investigated, however it is possible that he had received them from Portugal."
-mittel.5.a:0 "Terrible!"
-mittel.6.t:0 "A Third Police Officer has been Shot!"
-mittel.6.d:0 "Tragedy has struck Dar es Salaam! Yet again, for the third time, a police officer has been shot: this time by a member of the Makonde tribe. The Dar es Salaam police are now searching for the murderer and the cause of the attack; Portuguese involvement is suspected."
-mittel.6.a:0 "Terrible!"
-mittel.7.t:0 "Plantation Burned!"
-mittel.7.d:0 "A cashew plantation in Njassaland has been burned down by 'bandits' operating from across the Portuguese border. They've taken as much as they could of the recently harvested crop, burned the rest down and escaped back into Portuguese Mozambique."
-mittel.7.a:0 "Something must be done about this!"
-mittel.8.t:0 "Military Depot Raided!"
-mittel.8.d:0 "The 'bandits' don't ever fear the famous might of our Askari anymore! They have raided and stolen supplies from one of our military depots and escaped with them back to their camp in Mozambique."
-mittel.8.a:0 "Portugal must put an end to this!"
-mittel.9.t:0 "Portugal must put a stop to this!"
-mittel.9.d:0 "We should launch a formal complaint against Portugal. The continued existence of these 'bandit' camps possess a clear threat to our colony. If they cannot deal with a few bandits, they're clearly not fit to be a colonial power."
-mittel.9.a:0 "Summon the Portuguese Consul! We will deal with this ourselves!"
-mittel.9.b:0 "Perhaps a further escalation is in our interests after all..."
-mittel.9.c:0 "We shall take this all the way to Berlin!"
-mittel.10.t:0 "A Matter from Afrika"
-mittel.10.d:0 "Our Mittelafrikan Statthalter has come to us with a request for aid, he speaks of Portugal supporting bandits that murder German and Afrikan police and endanger our rule in Afrika, what should we do?"
-mittel.10.a:0 "Our relations with Portugal are too important, refuse to help"
-mittel.10.b:0 "We shall take up the matter with Portugal"
-mittel.11.t:0 "The Kaiser refuses"
-mittel.11.d:0 "The Kaiser has refused to help us, telling us to deal with these bandits ourselves and to stop ruining German relations with Portugal. We cannot expect any help from Berlin"
-mittel.11.a:0 "Damn!"
-mittel.12.t:0 "The Germans come knocking"
-mittel.12.d:0 "The Germans in Der es Salaam have come to their overlords in Berlin, and told them about our support of rebels in their territory, now Berlin demands we produce an explanation for our actions..."
-mittel.12.a:0 "Explain the situation"
-mittel.12.b:0 "We do not discuss internal affairs with foreign nations"
-mittel.13.t:0 "Portugal explains the situation"
-mittel.13.d:0 "The Portuguese Ambassador explained in great detail the chaotic situation in the Rumuva region..."
-mittel.13.a:0 "Who knew Afrika was so complicated!"
-mittel.14.t:0 "The foreign office declares the matter solved"
-mittel.14.d:0 "The Portuguese have made some token arrests, and the bandit war has calmed down for now, but the war is far from over, no matter what Berlin says."
-mittel.14.a:0 "There is more yet to come..."
-mittel.15.t:0 "Mittelafrika threatens our colonies"
-mittel.15.d:0 "The Germans in Dar es Salaam have noticed our support of rebels in their territories, and are now demanding we crack down on the rebels or 'face consequences'. What should we do?"
-mittel.15.a:0 "Excellent, perhaps we can avenge 1918!"
-mittel.15.b:0 "We have no choice, disarm the Ruga-Ruga, by force if needed"
-mittel.16.t:0 "Portugal disarms the rebels!"
-mittel.16.d:0 "The Portuguese have disarmed the bandits they have been sending into our territory at great cost to their own colonial stability. This matter is now truly solved"
-mittel.16.a:0 "Independent action pays off"
-mittel.17.t:0 "Portugal stands against us!"
-mittel.17.d:0 "The Portuguese have refused to disarm the bandits they've been sending into our colonies, if we wish to stop this, we will have to take real action against Portugal..."
-mittel.17.a:0 "Send in the troops, if they won't or can't clear out the bandits, we will."
-mittel.17.b:0 "We can't make our, yet...."
-mittel.18.t:0 "Mittelafrika stands down"
-mittel.18.d:0 "The German weaklings in Dar es Salaam have stood down from stopping our bandit attacks, we can now freely continue these attacks as we please"
-mittel.18.a:0 "Hah!"
-mittel.19.t:0 "The Germans cross the border"
-mittel.19.d:0 "The Germans have crossed the border into Mozambique to destroy the bandits, completely wrecking our national sovereignty. We must choose what to do"
-mittel.19.a:0 "Repel Them!"
-mittel.19.b:0 "Stand Down"
-mittel.20.t:0 "Portugal Caves In!"
-mittel.20.d:0 "The Portuguese have decided not to resist our troops during our raid into Mozambique, we now have military control of Mozambique and must decide our next action:"
-mittel.20.a:0 "Only occupation will bring peace"
-mittel.20.b:0 "Burn down the camps and leave"
+mittel.1.t:0 "모잠비크 동향"
+mittel.1.d:0 "대전기동안, 아프리카의 상황은 실로 모순적이였다. 동아프리카에서의 전쟁은 교착상태로 끝났고, 협상국이 독일령 동아프리카를 점령하였으며, 우리는 모잠비크를 점령하고 있었다. 양측 모두 수천의 아프리카인들을 짐꾼으로, 무장 경비병으로, 병사로 ‘적지’에서 모집하였으며, 전후 우리는 협상국 편에 선 자들을 처벌해야 했었다. 이제 그들은 모잠비크 국경을 거쳐 분산 배치되었으며 그곳엔 포르투갈의 신생 극단 정부가 그들을 우리에게 대항하도록 무장시키려는 계획을 하고 있다는 많은 루머가 존재하고 있다."
+mittel.1.a:0 "우리는 준비해야 한다."
+mittel.2.t:0 "모잠비크 동향"
+mittel.2.d:0 "대전기동안, 아프리카의 상황은 실로 모순적이였다. 동아프리카에서의 전쟁은 교착상태로 끝났고, 협상국이 독일령 동아프리카를 점령하였으며, 독일은 우리의 모잠비크를 점령하고 있었다. 양측 모두 수천의 아프리카인들을 짐꾼으로, 무장 경비병으로, 병사로 ‘적지’에서 모집하였으며, 전후 독일 훈족들은 우리 편에 가담한 토착민들에게 잔인한 보복 공격을 진행하였다. 그 이후로, 수천명의 토착민들은 모잠비크 국경으로 도망쳐 이제는 거점에서 거주하고 있다. 이 토착민들 대부분은 훈족들이 그들에게 한 행동에 대해 복수하기를 원하니, 이를 이용하는 것은 중앙아프리카에 악재를 일으킬 좋은 기회가 될 것이다."
+mittel.2.a:0 "계획을 해 보자..."
+mittel.3.t:0 "우리의 정당한 영토에서 벌어질 악재의 기회"
+mittel.3.d:0 "모잠비크에 있는 수용소에 분산 거주하는 분노한 토착민들을 무장시킴으로써 중앙아프리카 내에 불안정성을 유도할 좋은 기회가 있다. 중앙아프리카가 불안정할수록, 우리의 분홍 지도에 보이는 정당한 우리의 영토를 되찾을 기회가 증가할 것이다."
+mittel.3.a:0 "그들을 최대한 무장시켜라"
+mittel.3.b:0 "그들을 총과 탄약으로 무장시키지만, 다른 것들은 제공하지 않는다"
+mittel.3.c:0 "이 폭도들을 해산하라"
+mittel.4.t:0 "경찰관이 총에 맞다!"
+mittel.4.d:0 "한 마콘데 부족인이 루사카의 우리 경찰관 중 한명을 총으로 쏘았다! 도시는 아직도 충격 속에 빠져있으며, 사주자와, 무기를 넘겨준 조력자들 또한 지역 경찰에 의해 조사를 위해 구금되어 있다. 그가 포르투갈의 식민지 국경을 넘어 전달된 무기를 획득했다는 이론이 제시되었다."
+mittel.4.a:0 "끔찍하다!"
+mittel.5.t:0 "다른 경찰관이 총에 맞다!"
+mittel.5.d:0 "이번엔 리롱웨에서, 다른 경찰관이 마콘데 부족의 일원인 급진적 토착민에게 총을 맞았다. 그의 급진화에 대한 이유와 그의 무기의 근원은 아직도 조사되고 있지만, 포르투갈을 통해 그것들을 제공받는 것은 충분히 가능하다."
+mittel.5.a:0 "끔직하군!"
+mittel.6.t:0 "세번째로 경찰이 총에 맞다!"
+mittel.6.d:0 "비극이 다르 에스 살람에도 닥쳤다! 이번에도, 현재 세번째인, 경찰관은 마콘데 부족인에 의해 총을 맞았다. 다르 에스 살람 경찰은 살인범과 공격의 이유를 찾고 있으며; 포르투갈인의 연관이 의심되고 있다."
+mittel.6.a:0 "세상에!"
+mittel.7.t:0 "플랜테이션이 불타다!"
+mittel.7.d:0 "은자스랜드의 캐슈 플랜테이션이 포르투갈 국경을 넘나들면서 활동하는 ‘강도’들에게 불타버렸다. 그들은 최근 수확된 작물들을 최대한 약탈했으며, 여분을 모두 불태운 뒤 포르투갈령 모잠비크로 도망갔다."
+mittel.7.a:0 "조치가 취해져야 한다!"
+mittel.8.t:0 "군사 보급창이 약탈당하다!"
+mittel.8.d:0 "이 ‘강도’들은 우리 아스카리들의 명성 높은 위대함을 더 이상 무서워하지도 않는다! 그들은 우리의 군사 보급창 하나를 습격하고 보급품을 약탈한 뒤 모잠비크에 존재하는 그들의 기지로 탈출했다."
+mittel.8.a:0 "포르투갈은 이를 끝내야 한다!"
+mittel.9.t:0 "포르투갈은 이를 멈추어야 한다!"
+mittel.9.d:0 "우리는 포르투갈에 정식으로 항의를 보내야 한다. 이 지속적인 ‘강도’ 기지의 존재는 우리 식민지에 위협임이 뚜렷하다. 그들이 소수의 강도를 처리할 수 없다면, 그들은 식민 지배를 할 그릇이 되지 못할 것 이다."
+mittel.9.a:0 "포르투갈 영사를 소환하라! 우린 스스로 이를 처리할 것이다!"
+mittel.9.b:0 "어쩌면 사태의 심각화가 우리의 이익이 될 지도..."
+mittel.9.c:0 "우리는 이 사건들 모두 베를린에 가져가야 한다!"
+mittel.10.t:0 "아프리카에서의 문제"
+mittel.10.d:0 "중앙아프리카 총독이 우리에게 온 뒤 지원을 요청하면서, 그는 포르투갈의 지원을 받는 강도단이 독일인과 아프리카인 경찰관을 죽이고 우리의 아프리카의 지배에 위험을 끼친다고 발언하였다. 어떻게 대처할 것인가?"
+mittel.10.a:0 "포르투갈과의 관계는 중요하므로, 도움을 거절한다"
+mittel.10.b:0 "포르투갈과 함께 이 문제를 해결할 것이다"
+mittel.11.t:0 "카이저께서 거절하시다"
+mittel.11.d:0 "카이저께서는 강도단들은 우리 스스로 처리하도록 하고, 독일과 포르투갈 간의 관계를 망치지 말라 하시며 도움을 거절하셨다. 우리는 베를린으로부터 어떤 도움도 기대할 수 없다."
+mittel.11.a:0 "젠장!"
+mittel.12.t:0 "독일인들이 방문하다"
+mittel.12.d:0 "다르 에스 살람의 독일인들이 베를린의 대군주께서 오시고, 그들의 영토에서 우리 지원을 받는 반군들에 대해 이야기를 나누었다고 하였으며, 이제 베를린은 우리에게 우리의 행동에 대한 설명을 요구하고 있다…"
+mittel.12.a:0 "상황을 설명한다"
+mittel.12.b:0 "우리는 외국과 국내 문제를 이야기하지 않는다"
+mittel.13.t:0 "포르투갈이 상황을 설명하다"
+mittel.13.d:0 "포르투갈 외교관이 루뭄바 지역에서의 혼란스러운 상황을 자세한 정보와 함께 설명하였다..."
+mittel.13.a:0 "아프리카가 그리 복잡한 줄 누가 알았겠는가!"
+mittel.14.t:0 "외교 공관이 문제 해결을 선언하다"
+mittel.14.d:0 "포르투갈인들은 결백함을 증명해냈고, 강도와의 전쟁은 현재 잦아들었지만, 베를린이 뭐라 말하든, 전쟁은 끝나기에 멀었다."
+mittel.14.a:0 "아직 더 남았을 것이다..."
+mittel.15.t:0 "중앙아시아가 우리의 식민지를 위협하다"
+mittel.15.d:0 "다르 에스 살람의 독일인들이 그들 영토 내의 반군에 대한 우리의 지원을 인지하고, 이제 그들은 우리에게 반군들을 해산시키기를 요구하면서 그러지 않을 경우 ‘결과를 맞이할 것’이라 하였다. 어떻게 대처해야 하는가?"
+mittel.15.a:0 "훌륭하군, 아마도 1918년의 복수를 할 수 있을 것이다!"
+mittel.15.b:0 "선택권이 없다, 루가-루가(동아프리카 비정규군)를 해산하라, 필요하다면 무력을 동원해서라도"
+mittel.16.t:0 "포르투갈이 반군들을 해산하다!"
+mittel.16.d:0 "포르투갈인들이 그들의 식민 안정성을 위해 거금을 들여가며 우리의 영토에 보낸 반군들을 무장해제했다. 이 문제는 이제 진정으로 해결되었다."
+mittel.16.a:0 "독립적 행동이 빛을 발하다!"
+mittel.17.t:0 "포르투갈이 우리에게 대항하다!"
+mittel.17.d:0 "포르투갈인들이 우리 식민지에 보내던 강도들의 무장해제를 거부하였으며, 만약 우리가 이를 멈추기를 원한다면, 우리는 포르투갈을 향해 실제적 행동을 해야 할 것이다..."
+mittel.17.a:0 "군 병력을 보내라, 그들이 강도들을 치우는것을 원하지 않던 불가능하던, 우리는 할 것이다."
+mittel.17.b:0 "우리 스스로는 불가능하다, 아직은...."
+mittel.18.t:0 "중앙아프리카가 굴복하다"
+mittel.18.d:0 "다르 에스 살람의 독일 약골들은 우리의 강도 공격들을 막는 것을 포기했으며, 이제 우리가 원하는 대로 자유롭게 공격을 감행할 수 있다."
+mittel.18.a:0 "하!"
+mittel.19.t:0 "독일이 국경을 넘다"
+mittel.19.d:0 "독일이 강도들을 분쇄하기 위해 모잠비크 국경을 넘어왔으며, 이는 우리 국가의 자주성을 완벽히 침해한 것이다. 우리는 어떻게 대처해야 할지 선택해야만 한다."
+mittel.19.a:0 "그들을 쫓아내라!"
+mittel.19.b:0 "물러나라"
+mittel.20.t:0 "포르투갈이 굴복하다!"
+mittel.20.d:0 "포르투갈인들은 우리 군의 모잠비크 습격에 대항하지 않기로 결정하였고, 우리는 모잠비크의 군사으로 통제하고 있으며 우리의 다음 행동을 결정해야만 한다:"
+mittel.20.a:0 "점령만이 평화를 불러올 것이다"
+mittel.20.b:0 "기지를 불태우고 떠나자"
 mittel.21.t:0 "Mittelafrika seizes Northern Mozambique"
 mittel.21.d:0 "The Mittelafrikans have occupied yet another one of our rightful territories, Northern Mozambique has been seized by the Mittelafrikan soldiers that entered our territory"
 mittel.21.a:0 "Damn them!"
