--- a/Kaiserreich Korean Translation/localisation/KR_Siam_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Siam_l_english.yml
@@ -174,10 +174,10 @@ SIA_totalist_party_TH:0 "타이 공산당"
 SIA_totalist_party_TH_long:0 "타이 공산당(Pak Kommunist Thai)"
 SIA_radical_socialist_party:0 "노동당"
 SIA_radical_socialist_party_long:0 "노동당(Pak Sahachip)"
-SIA_syndicalist_party:0 "Khana Sahakarn Siam"
-SIA_syndicalist_party_long:0 "Khana Sahakarn Siam(Syndicalist Party of Siam)"
-SIA_syndicalist_party_TH:0 "Khana Sahakarn Thai"
-SIA_syndicalist_party_TH_long:0 "Khana Sahakarn Thai(Syndicalist Party of Thailand)"
+SIA_syndicalist_party:0 "시암 조합주의당"
+SIA_syndicalist_party_long:0 "시암 조합주의당(Khana Sahakarn Siam)"
+SIA_syndicalist_party_TH:0 "타이 조합주의당"
+SIA_syndicalist_party_TH_long:0 "타이 조합주의당(Khana Sahakarn Thai)"
 SIA_social_democrat_party:0 "사회주의 정당"
 SIA_social_democrat_party_long:0 "사회주의 정당(Pak Sangkhomniyom)"
 SIA_social_liberal_party:0 "Pak Kijsangkhom"
@@ -192,11 +192,11 @@ SIA_authoritarian_democrat_party_reform:0 "인민 위원회"
 SIA_authoritarian_democrat_party_reform_long:0 "인민 위원회(Khanagummakarn Ratsadon)"
 SIA_authoritarian_democrat_party_khana_ratsadon:0 "인민당"
 SIA_authoritarian_democrat_party_khana_ratsadon_long:0 "인민당 (Khana Ratsadon)"
-SIA_paternal_autocrat_party:0 "Boworadet Faction"
-SIA_paternal_autocrat_party_long:0 "Boworadet Faction"
-SIA_paternal_autocrat_party_plaek:0 "Pak Seri Manangkhasila"
-SIA_paternal_autocrat_party_plaek_long:0 "Pak Seri Manangkhasila(Free Thai Party)"
-SIA_paternal_autocrat_party_sarit:0 "Pak Chard Sangkhom"
+SIA_paternal_autocrat_party:0 "보왈라딧트 파벌"
+SIA_paternal_autocrat_party_long:0 "보왈라딧트 파벌"
+SIA_paternal_autocrat_party_plaek:0 "자유 시암당"
+SIA_paternal_autocrat_party_plaek_long:0 "자유 시암당(Pak Seri Manangkhasila)"
+SIA_paternal_autocrat_party_sarit:0 "사회 민족당"
 SIA_paternal_autocrat_party_sarit_long:0 "사회 민족당(Pak Chard Sangkhom)"
 SIA_national_populist_party:0 "자유 타이당"
 SIA_national_populist_party_long:0 "자유 타이당(Pak Seri Manangkhasila)"
@@ -298,7 +298,7 @@ siam.13.d.plaek:0 "King Prajadhipok of the [SIA.GetName], also known as Rama VII
 siam.13.d.rep:0 "Prajadhipok Mahidol, former King Prajadhipok of the [SIA.GetName], also known as Rama VII, the 7th monarch of the House of Chakri, due to pneumonia this morning while being in exile. The childless monarch will be succeeded by his nephew Ananda Mahidol, who took the regnal name Rama VIII as the pretender to the throne of Siam."
 siam.13.a:0 "May he rest in peace"
 
-siam.14.t:0 "Paribatra Sukhumbhand's scheme" # Boripatr (?)
+siam.14.t:0 "파리바트라 수흐람반드의 계획" # Boripatr (?)
 siam.14.d:0 "The new king is still young and currently away from home studying in Switzerland. Should we take the initiative and quickly seize the title for him who could surely lead us through this war?"
 siam.14.a:0 "The throne is vacant for us"
 siam.14.b:0 "We should stay true to the rightful king"
@@ -312,7 +312,7 @@ siam.15.a:0 "May he rest in peace"
 siam.33.t:0 "The death of Rama IX" # Boripatr
 siam.33.d:0 "King Parbatra Sukhumbhand of the [SIA.GetName], also known as Rama IX, the 9th monarch of the House of Chakri, suffered a heart attack while walking around his bedroom in the Grand Palace last night. The palace medical team arrived too late to resuscitate him. Died with no male heir, the monarch will be succeeded by his brother Chumbhotbongs Paribatra, who took the regnal name Rama X."
 
-siam.34.t:0 "The death of Rama X" # Boripatr
+siam.34.t:0 "라마 10세의 사망" # Boripatr
 siam.34.d:0 "King Chumbhotbongs Paribatra of the [SIA.GetName], also known as Rama X, the 10th monarch of the House of Chakri, died peacefully due to his old age in the Suan Pakkard Palace. Died with no male heir, the monarch will be succeeded by his brother, Sukhumabhinanda, who took the regnal name Rama XI."
 
 ## Introduction Events ##
@@ -321,20 +321,20 @@ siamn.1.d:0 "As one of the countries that benefited from the German Victory duri
 siamn.1.a:0 "Interesting, tell me more!"
 siamn.1.b:0 "I've already grasp the general situation - No thanks."
 
-siamn.2.t:0 "The Kingdom's State of Politics"
+siamn.2.t:0 "시암 왕국의 정부와 정치"
 siamn.2.d:0 "Ever since the coronation of King Rama VII in 1925 - most if not all of the policies are dictated by the Aphiratthamontri Sapha (Council of State) made up of the king's older siblings who worked for the nation ever since the Rama V era as he lacks a strong grip on his reign. Even though he had promised the [SIA.GetAdjective] Foreign-graduated Intelligentsia who demand a Constitution Monarchy, even a reform in general is hard to pass if it harmed the nobility's interests.\n\nSurrounded by the eternal enemy of the Konbaung dynasty to the West, Yunnan bandits to the north and the German Imperialists to the east. Siam is currently in a dire situation - it will either perish or reform itself to a modern state, be it by negotiation or by force."
-siamn.2.a:0 "Pity on him"
+siamn.2.a:0 "그를 불쌍히 여기라"
 
-siamn.3.t:0 "The Kingdom's Overall Situation"
+siamn.3.t:0 "시암 왕국의 전반적인 상황"
 siamn.3.d:0 "While looking quite prosperous from the inside - Siam is pretty reliant on investments and trade ties with Germany. Its industry in general is pretty fragile with products such as rice, sugar and timber being the main exports. The nationalism among ethnic minorities is also on the rise which might result in troublesome separatist movements in the future. The inflated Bureaucratic system from the Rama VI era siphoned off much needed taxes while bandits still run wild in the fringe areas."
-siamn.3.a:0 "I'd rather pick the Philippines"
+siamn.3.a:0 "나는 필리핀을 선택하려고한다."
 
 ## Black Monday and Early political chaos # Max Reform 7 - Lowest 0: 0-2 = Khana Ratsadon coup, 3-4 = Civil War with Prajadhipok Bias (based on Boworadet Rebellion), 5-6 = success, 7 = Reactionary coup with Paribatra as HoS
-siamn.4.t:0 "Black Monday hits Siam!"
+siamn.4.t:0 "검은 월요일이 시암을 강타하다!"
 siamn.4.d:0 "Being heavily reliant on the German economy - the Black Monday crash quickly dragged Siam into an abyss as all main agricultural exports began to wither in their warehouses and granary and clerks working for foreign companies were layed off. People are starting to gather around the Grand Palace - maybe we should do something before the situation worsens."
 siamn.4.a:0 "Khun Prah!"
 
-siamn.5.t:0 "Jasmine Rice Problems"
+siamn.5.t:0 "재스민 쌀 문제"
 siamn.5.d:0 "Being one of the largest [SIA.GetAdjective] exporters of rice, the farmers across the Chao Phraya plateau need government help to deal with the excessive amount of rice available in the market as export dry up."
 siamn.5.a:0 "Buy up most of the rice to stabilise the price" #-200, +2 reform
 siamn.5.b:0 "Agree to buy up some excess rice" #-100, +1 reform
@@ -342,21 +342,21 @@ siamn.5.c:0 "The free market shall resolve that issue" #0, 0 reform
 
 siamn.6.t:0 "비대해진 관료체계"
 siamn.6.d:0 "The modern Bureaucratic system was formed during Rama V's era and was greatly expanded during Rama VI's reign. However - it's proved to be too large and ineffective yet firing any more people would means more people who suffer from 'voluntary retirement'."
-siamn.6.a:0 "Layoff Lower Clerks" # 0 reform
-siamn.6.b:0 "Layoff Managers and Ministers" #-100, +1 reform
-siamn.6.c:0 "Keep the Status Quo for now" #-200, +2 reform
+siamn.6.a:0 "하급공무원들을 해고한다" # 0 reform
+siamn.6.b:0 "관리자 및 관료위주로 해고한다." #-100, +1 reform
+siamn.6.c:0 "현상유지" #-200, +2 reform
 
-siamn.7.t:0 "Military Expenditures"
+siamn.7.t:0 "군 지출 문제"
 siamn.7.d:0 "Siam spent up to 25% of her annual revenue on the military industrial complex. as being surrounded by both historical enemies and the imperialist westerners from all sides was an existential threat. However, in this hard time maybe cutting some procurement budget wouldn't hurt us that much"
-siamn.7.a:0 "All research funding cut" #-10 for 3 years, 0 reform
-siamn.7.b:0 "Anything but new rifle development" #-10 for 3 years, +1 reform
-siamn.7.c:0 "We shouldn't let our weakness be exposed to the enemy!" #-200, +2 reform
+siamn.7.a:0 "모든 연구 예산 삭감" #-10 for 3 years, 0 reform
+siamn.7.b:0 "신식 소총 개발을 제외한 나머지 삭감" #-10 for 3 years, +1 reform
+siamn.7.c:0 "우리의 약점을 적에게 노출시키지 말아야한다!" #-200, +2 reform
 
 siamn.8.t:0 "긴급세"
 siamn.8.d:0 "Even though lots of reforms have already been enacted - we still don't have enough money for this year's budget. An emergency tax should help but that would surely create more suffering for our loyal subjects."
-siamn.8.a:0 "Increase Income Tax for everyone!" #+50, 0 reform
-siamn.8.b:0 "Double the Inheritance tax" #+10, +1 reform
-siamn.8.c:0 "Lift the ban on Gambling" #+30, -5 NP, +1 reform
+siamn.8.a:0 "모두에게 소득세를 늘린다!" #+50, 0 reform
+siamn.8.b:0 "상속세를 2배로 늘린다" #+10, +1 reform
+siamn.8.c:0 "도박 금지를 해제한다" #+30, -5 NP, +1 reform
 
 ## New Governmnet Established for Siam ##
 siamn.10.t:0 "카나 랏사돈(인민당)의 임시내각"
@@ -371,9 +371,9 @@ siamn.11.a:0 "A great leap forward for us all."
 
 siamn.12.t:0 "Yellow Cover Dossier Affair"
 siamn.12.d:0 "Today, Luang Praditmanutham, a Minister of State and a member of the People's Party, presented his proposal of the Draft National Economic Development Plan, or the Yellow Cover Dossier, to the National Assembly.\n\nThe Yellow Paper was a plan to arrange and provide State welfare, to distribute all land to the rural poor, to intervene in economic affairs of the private sector and to provide rural farmers more economic subsidies.\n\nSome said that it's literally a syndicalist policy rip-off while others agreed with him that the draft will truly help the lives of common [SIA.GetAdjective] people. \n\nwhat should HM the king reaction be?"
-siamn.12.a:0 "Fully agree with Luang Praditmanutham"
-siamn.12.b:0 "Some content might need to be toned down here."
-siamn.12.c:0 "그는 생디칼리스트 동조자다 체포하라!"
+siamn.12.a:0 "루앙 쁘리디파놈용의 의견에 완전히 동의한다."
+siamn.12.b:0 "일부 내용은 여기에서 누그려뜨려야한다."
+siamn.12.c:0 "그는 생디칼리즘에 동조하고 있다. 체포하라!"
 
 siamn.13.t:0 "국왕 프라차티뽁의 대답"
 siamn.13.d:0 "King Prajadhipok letter have arrived, criticising Luang Praditmanutham harshly about the draft and even accused him of being a Syndicalist! A meeting between the leftist members of the People's Party decided to..."
@@ -394,10 +394,10 @@ siamn.15.c:0 "두 파벌들을 멈추고 중재인으로 들어서게 한다."
 siamn.16.t:0 "시암 내전의 서막"
 siamn.16.prd:0 "Despite the army chief declared that his allegiance was with the Monarchy itself - a small spark start with an armed mutiny by the Navy in Sattahip and Kanchanaburi quickly turned into a large flame which engulfed the entire nation."
 siamn.16.ppd:0 "Despite the army chief declared that his allegiance was with the New Cabinet itself - a small spark start with an armed mutiny by troops in Lopburi and Nakhon Ratchasima quickly turned into a large flame which engulfed the entire nation."
-siamn.16.pra:0 "For Country! (Rebel side)"
-siamn.16.prb:0 "For King! (Government side)"
-siamn.16.ppa:0 "For Country! (Government side)"
-siamn.16.ppb:0 "For King! (Rebel side)"
+siamn.16.pra:0 "국가를 위하여! (반군 측)"
+siamn.16.prb:0 "국왕을 위하여! (정부 측)"
+siamn.16.ppa:0 "국가를 위하여! (정부 측)"
+siamn.16.ppb:0 "국왕을 위하여! (반군 측)"
 
 siamn.17.t:0 "Rebel controling Bangkok (AI event)"
 siamn.17.d:0 "This event isn't meant to fire for Human players - please report this as a bug if this appears to you"
@@ -412,7 +412,7 @@ siamn.18.b:0 "We'll never negotiate with them!"
 siamn.19.t:0 "Government reply"
 siamn.19.d.yes:0 "They easily comply with us and laid down their arms - meanwhile their leader are now escaping overseas"
 siamn.19.d.no:0 "They send us back a crate - with the inside being our messenger's corpse filled with bullet holes..."
-siamn.19.a:0 "Royalist is back in power again!"
+siamn.19.a:0 "왕당파들이 다시금 권력을 잡았다!"
 siamn.19.b:0 "Syndicalist torches shall guide our nation!"
 siamn.19.c:0 "Those Bastards!"
 
@@ -426,8 +426,8 @@ siamn.21.a:0 "They surrendered (Parliamentarians)"
 
 siamn.22.t:0 "루앙 피분송크람의 쿠데타" 
 siamn.22.d:0 "The situation has stabilised a little bit since we took power - Maybe it's time..."
-siamn.22.a:0 "... to repeal Martial law and return to normal."
-siamn.22.b:0 "... to take power for ourselves."
+siamn.22.a:0 "... 계엄령을 해제하고 평시상태로 돌아온다."
+siamn.22.b:0 "... 우리 자신을 위해 정권을 잡는다."
 
 siamn.23.t:0 "[GetYear] 총선거"
 siamn.23.d.syn:0 "With the conservetives being essentially purged from power- the election result is pretty clear here."
@@ -474,7 +474,7 @@ siamn.30.d:0 "The Japanese do own some iron mines in Yala and Nakhon Si Thammara
 
 siamn.31.t:0 "피분 송크란의 약한 외교 정책"
 siamn.31.d:0 "Due to our decisions regarding the National Industrialisation scheme bringing in little to no change. Our opponents and newspaper alike are accusing us of being cowards..."
-siamn.31.a:0 "Damn it!"
+siamn.31.a:0 "제기랄!"
 
 ## Siamese- Burmese War (NatPop) ##
 
@@ -498,7 +498,7 @@ siamn.35.d:0 "Curses! The [SIA.GetAdjective] dogs have completely overpowered us
 siamn.35.a:0 "We yield because we have no other choice..."
 siamn.35.b:0 "They must be joking, Kaba Ma Kyei!"
 
-siamn.36.t:0 "The Burmese Government Refuses!"
+siamn.36.t:0 "버마 정부가 거절하였다!"
 siamn.36.d:0 "Foolishly, the damn Burmese have refused our generous offer."
 siamn.36.a:0 "The War Continues..."
 
@@ -524,8 +524,8 @@ siamn.40.b:0 "On the second thought - let's stop it in its tract"
 
 siamn.41.t:0 "국명 및 국적 변경안"
 siamn.41.d:0 "While our country have been known as 'Siam' since the late Ayutthaya era, some people in the [SIA.GetAdjective] Intelligentsia community said that our nation is mainly populated by the Thais with some popular support from the public so a namechange to `Pratet Thai`(Thailand) should be done to refelct that fact. However, this could antagozied the minorities - what should we do?"
-siamn.41.a:0 "'Thaland' will led us into the new future!"
-siamn.41.b:0 "Nah - let's kept the old 'Siam' here..."
+siamn.41.a:0 "'타이' - 우리를 새로운 미래로 이끌게 할 것이다"
+siamn.41.b:0 "아니 - 옛 '시암'을 여기에서 지키자..."
 
 siamn.42.t:0 "`Tai Merger` and New National Anthem Act"
 siamn.42.d:0 "Continue from the previous law, The use of 'Tai Lao', 'Tai Dam', 'Tai Daeng', 'Tai Puan', 'Tai Yai', 'Tai Sayam', 'Tai Khuean', 'Tai Lue', 'Tai Yuan' and others in 'Tai-Kadai` Cultural group are now colliqually known as Thais, while others will be have their 'Thai' prefix too such as the Chinese who lived in [SIA.GetName] are now called 'Thai-Chinese` and would consider themselve as Thais by law too. THe National Anthem will also be changed to reflect this fact with competition held for that within 30 days."
@@ -588,7 +588,7 @@ siamn..b:0 "-"
 
 ### Political Path ###
 SIA_prajadhipokreform:0 "프라차티뽁의 개혁"
-SIA_ratthasapha:0 "Formation of the Ratthasapha"
+SIA_ratthasapha:0 "시암 상원 수립"
 SIA_halfleafdemocracy:0 "Half-Leaf Democracy"
 SIA_tourthenation:0 "국내 순방"
 SIA_royalprojectfoundation:0 "왕실 프로젝트 재단"
@@ -612,7 +612,7 @@ SIA_ratthaniyomdecrees:0 "국민문화 칙령"
 SIA_reapporachthemonarchy:0 "왕실과의 재접근"
 SIA_buddhisttraditions:0 "불교 전통"
 SIA_creationoftherepublic:0 "공화국으로의 전환"
-SIA_phaopoliceintegration:0 "Integration of Police Command"
+SIA_phaopoliceintegration:0 "경찰 지휘 통합"
 SIA_survivorofthecivilwar:0 "Lessons from the Civil War"
 SIA_prestigious_senate:0 "The Prestigious Senate"
 SIA_privycouncilreforms:0 "Privy Council Reforms"
@@ -622,7 +622,7 @@ SIA_reconstruction:0 "Rising from the Ashes"
 SIA_amnesty:0 "Issuing Amnesties"
 SIA_the_great_purge:0 "숙군 작업"
 SIA_military_royalty:0 "Ensuring Loyalty"
-SIA_people_assembly:0 "The People's Assembly"
+SIA_people_assembly:0 "인민 회의"
 SIA_faith_in_the_star:0 "Our Faith in the Star"
 SIA_new_order_rise:0 "새로운 시암 질서"
 SIA_arunothai:0 "Arunothai"
@@ -668,7 +668,7 @@ SIA_governmentalreform:0 "정부 개혁"
 SIA_governmentalreform_desc:0 "The current Siamese bureaucratic system is quite oversized for its country size - not only is it inefficient but also known to drain large volume of our budget each year, reforming this should be our priority."
 SIA_juridicialreform:0 "법률 개혁"
 SIA_juridicialreform_desc:0 "While the archaic Ayutthayan era law was long gone by now, gaining back extraterritorial jurisdiction rights we lost to the Bowring treaty and other similar ones we make with the Europeans must be done to regain our prestige back. This will also make our juristic system become much more efficient than the current quagmire."
-SIA_centralizedpolicecommand:0 "Centralised Police Command"
+SIA_centralizedpolicecommand:0 "경찰 지휘의 중앙화"
 SIA_centralizedpolicecommand_desc:0 "Since the Welkrieg our police command became paralyzed due to a mix of German, Italian and American higher staffs. By slowly replacing them with the Siamese graduates and merging the Metropolitan and Regional police command under a single office, they should now work at a greater efficiency than ever before."
 SIA_SDSI:0 "SDSI"
 SIA_SDSI_desc:0 "Siamese Department of Secret Intelligence (SDSI; also known as Samnag-ngarn Khao-khrong Haeng Chard Siam - SKCS) whose job was to keep an eye on both domestic and foreign intelligence, with maintainace of the country's stability as its goal."
@@ -732,29 +732,29 @@ SIA_twooceantradinghub:0 "Two-Ocean Trading Hub"
 ### Army Path ###
 SIA_royalsiamesearmy:0 "왕실 시암 육군"
 SIA_royalsiamesearmy_desc:0 "First formed in 1874, partly as a response to new security threats brought in by the 1855 Bowing treaty which open us to the international trade - it's the oldest and largest branch in the Siamese Armed Forces which stil fulfil its role as the protector of the kingdom's sovereignty."
-SIA_phibunsongkhramplan:0 "피분 송크람의 게혁"
+SIA_phibunsongkhramplan:0 "피분 송크람의 계획"
 SIA_phibunsongkhramplan_desc:0 "Emphasised Superior Firepower Doctrine"
 SIA_seriroengritplan:0 "Seriroengrit's Reform"
 SIA_seriroengritplan_desc:0 "Emphasises Mass Combat Doctrine"
-SIA_phrayaphahonplan:0 "Phahonpolpayuhasena's Plan"
+SIA_phrayaphahonplan:0 "빠혼 폰파유하세나의 계획"
 SIA_phrayaphahonplan_desc:0 "Emphasises Grand Battleplan Doctrine"
 SIA_militaryaffairs:0 "Military Affairs"
-SIA_jungletraining:0 "Jungle Combat Training"
+SIA_jungletraining:0 "정글 전투장비"
 SIA_femalecorps:0 "Suranaree Corps"
 SIA_asymmetricalwarfare:0 "Asymmetrical Warfare"
 SIA_newstandardrifle:0 "New Standard Rifle"
 SIA_artilleryresearchdivision:0 "Artillery Research Division"
 SIA_salacheepphurchard:0 "For the Motherland!"
 SIA_expandsupportcapaciy:0 "Expand Support Capacity"
-SIA_armyaffairs:0 "Army Reorganisation"
+SIA_armyaffairs:0 "군 재조직화"
 SIA_flexiblechainofcommand:0 "Flexible Chain of Command"
 SIA_specialforce:0 "Special Warfare Command"
 SIA_counterinsurgencytactics:0 "Counter-Insurgency Tactics"
 SIA_taharpran:0 "Taharn Pran"
-SIA_royalmiltaryacademy:0 "Chulachomklao Royal Military Academy"
+SIA_royalmiltaryacademy:0 "출라촘끄라오 왕실 사관학교"
 SIA_royalmiltaryacademy_desc:0 "By merging the Royal Military Academy (founded in 1887) with the Royal Thai Army Polytechniques Institute, the newly-named Chulachomklao Royal Military Academy should get better results as they get access to greater funding than ever before."
-SIA_royalmunitionsfactory:0 "Royal Munitions Factory"
-SIA_industrialmobilization:0 "Industrial Mobilisation Plan"
+SIA_royalmunitionsfactory:0 "왕실 보급품 공장"
+SIA_industrialmobilization:0 "산업 동원 계획"
 SIA_expandsupportcapacity:0 "Expand Support Capacity"
 
 ### Navy Path ###
@@ -766,7 +766,7 @@ SIA_coastaldefenseships:0 "Coastal Defence Ships"
 SIA_riverpatolunit:0 "River Patrol Units"
 SIA_destroyerfleet:0 "New Chonburi-Class Destroyers"
 SIA_subships:0 "S-ships Project"
-SIA_twooceannavy:0 "Two-ocean Navy"
+SIA_twooceannavy:0 "2대양 해군"
 SIA_expandsattahip:0 "Expand Sattahip"
 SIA_wolfpacks:0 "Convoy Hunting"
 SIA_alargefleet:0 "Fleet in Being"
