--- a/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Cuba_l_english.yml
@@ -1,92 +1,90 @@
-l_english:
-
 ### Flags, Tooltips and Opinion Modifiers ###
-CUB_all_CAN:0 "Cuba Allies Canada"
-CUB_no_all_CAN:0 "Canada refused alliance with Cuba"
-CUB_no_int_CAN:0 "Cuba Refused Integration into the Caribbean Federation"
-CUB_CAF_Cuban_Minster_no:0 "The Ministers will Wait for Election"
+CUB_all_CAN:0 "쿠바와 캐나다 동맹"
+CUB_no_all_CAN:0 "캐나다가 쿠바와 동맹하는 것을 거절"
+CUB_no_int_CAN:0 "쿠바가 카리브해 연방에 합병되는 것을 거부"
+CUB_CAF_Cuban_Minster_no:0 "장관들은 선거를 기다릴 것입니다"
 
 ### Ideas ###
 havana_general_strike:0 "Havana General Strike"
 
 ### Parties ###
 CUB_totalist_party:0 "URC"
-CUB_totalist_party_long:0 "Unión Revolucionaria Cubana"
+CUB_totalist_party_long:0 "쿠바 혁명 연합"
 CUB_radical_socialist_party:0 "PSP"
-CUB_radical_socialist_party_long:0 "Partido Socialista Popular"
+CUB_radical_socialist_party_long:0 "대중사회주의당"
 CUB_syndicalist_party:0 "PSP"
-CUB_syndicalist_party_long:0 "Partido Socialista Popular"
+CUB_syndicalist_party_long:0 "대중사회주의당"
 CUB_social_democrat_party:0 "CSD"
-CUB_social_democrat_party_long:0 "Coalición Socialista Democrática"
+CUB_social_democrat_party_long:0 "사회민주주의 연합"
 CUB_social_liberal_party:0 "PLC"
-CUB_social_liberal_party_long:0 "Partido Liberal de Cuba"
+CUB_social_liberal_party_long:0 "쿠바 진보당"
 CUB_market_liberal_party:0 "PLC"
-CUB_market_liberal_party_long:0 "Partido Liberal de Cuba"
+CUB_market_liberal_party_long:0 "쿠바 진보당"
 CUB_social_conservative_party:0 "PUC"
-CUB_social_conservative_party_long:0 "Partido de la Unión Constitucional"
+CUB_social_conservative_party_long:0 "헌법연합당"
 CUB_authoritarian_democrat_party:0 "CNP"
-CUB_authoritarian_democrat_party_long:0 "Cuban National Party Liberal Wing"
+CUB_authoritarian_democrat_party_long:0 "쿠바 진보파"
 CUB_paternal_autocrat_party:0 "CNP"
-CUB_paternal_autocrat_party_long:0 "Cuban National Party Centrist Wing"
+CUB_paternal_autocrat_party_long:0 "쿠바 중도파"
 CUB_national_populist_party:0 "CNP"
-CUB_national_populist_party_long:0 "Cuban National Party Right Wing"
+CUB_national_populist_party_long:0 "쿠바 우파"
 
 ### Events ###
-cuba.1.t:0 "Syndicalism spreading in America!"
+cuba.1.t:0 "아메리카 대륙에 생디칼리즘이 퍼지다!"
 cuba.1.d:0 "The increasing power of the Combined Syndicates of America has been of great concern to the Cuban government. President Vinageras fears now that the CSA controls large parts of the former USA's south and east, Cuba will soon be threatened by the godless Syndicalists. With the USA shattered, our nation needs to look for new allies."
-cuba.1.a:0 "Only Canada can protect us from the Syndicalists!"
-cuba.1.b:0 "Cuba can protect itself!"
+cuba.1.a:0 "캐나다만이 우리를 생디칼리즘으로 부터 지켜줄 수 있어!"
+cuba.1.b:0 "쿠바 스스로 막아낼 수 있다!"
 
-cuba.2.t:0 "Cuba asks for protection"
+cuba.2.t:0 "쿠바가 보호를 요청"
 cuba.2.d:0 "The increasing power of the Combined Syndicates of America has been of great concern to the Cuban government. President Vinageras fears that, now that the CSA control large parts of the former USA's south and east, Cuba will soon be threatened by the godless Syndicalists. With the USA shattered, Cuba pleads for our protection."
-cuba.2.a:0 "We can always use a new ally"
-cuba.2.b:0 "Alright, but Cuba must join the Caribbean Federation"
-cuba.2.c:0 "We can't protect Cuba..."
+cuba.2.a:0 "새로운 동맹으로 끌어들이자"
+cuba.2.b:0 "좋다, 대신에 쿠바는 카리브해 연방에 들어가야한다"
+cuba.2.c:0 "우리는 쿠바를 보호할 수 없어..."
 
-cuba.3.t:0 "Cuba is left alone"
+cuba.3.t:0 "쿠바가 홀로 남겨지다"
 cuba.3.d:0 "We have been informed that Cuba asked the Entente for protection against us, but the talks led to nothing and Cuba is now standing alone."
-cuba.3.a:0 "Sweet news"
+cuba.3.a:0 "좋은 뉴스군"
 
-cuba.4.t:0 "Join the Caribbean Federation?"
+cuba.4.t:0 "카리브 연방에 참가하시겠습니까?"
 cuba.4.d:0 "The Canadian government has offered us to join the Entente, but we are required to become part of the Caribbean Federation. Cuba would retain its internal sovereignty, but matters concerning the military, economy, and foreign policy would be decided by the federal government in Georgetown."
-cuba.4.a:0 "Never! We are a free and independent nation"
-cuba.4.b:0 "We have no choice, we can't fight the Reds on our own..."
-cuba.4.c:0 "Alright, we'll join the Federation, but we want fair representation..."
+cuba.4.a:0 "절대 그럴수없다! 우리는 자유로운 독립국가다"
+cuba.4.b:0 "달리 선택지가 없다, 우린 빨갱이들과 싸우기에 역부족해..."
+cuba.4.c:0 "좋다, 연방에 가입하겠지만, 공정한 거래를 원한다..."
 
-cuba.5.t:0 "Cuban Ministers in our Government?"
+cuba.5.t:0 "우리 정부에 쿠바 장관진을 채용할까요?"
 cuba.5.d:0 "Cuba has petitioned to join our Federation, but demands fair political representation in our government. Considering that Cuba's population is as large as the entire Federation's, the request seems reasonable. But some of our ministers fear that that Cubans will dominate our government and the Federation."
-cuba.5.a:0 "The request is reasonable. Invite Cuban officials into our government"
-cuba.5.b:0 "No, they will wait for an election"
+cuba.5.a:0 "납득가능한 요청이다. 쿠바 정부관리들을 채용하라"
+cuba.5.b:0 "거절한다, 다음 선거를 기다리라고 해라"
 
-cuba.6.t:0 "The Caribbean Federation Denied our Request"
+cuba.6.t:0 "카리브 연방이 우리의 요구를 거절함"
 cuba.6.d:0 "The bastards in Georgetown rejected our reasonable request. They have left us in the open, as a sacrificial lamb to be slaughtered by the godless Syndicalists"
-cuba.6.a:0 "Damn them!"
-cuba.6.b:0 "We have no choice, we can't fight the Reds on our own..."
+cuba.6.a:0 "빌어먹을 놈들!"
+cuba.6.b:0 "그럼 할 수 없다, 우리 스스로 빨갱이들과 싸우기엔 역부족이다..."
 
-cuba.7.t:0 "The annexation of Cuba!"
+cuba.7.t:0 "쿠바 합병"
 cuba.7.d:0 "After a brief war we finally annexed Cuba. We can now release them as a free state with a syndicalist government or we can keep the military occupation."
-cuba.7.a:0 "An independent Cuba"
-cuba.7.b:0 "Military occupation is better!"
+cuba.7.a:0 "독립된 쿠바"
+cuba.7.b:0 "군사 점령이 더 낫다!"
 
-cuba.8.t:0 "Cuba joins the Caribbean Federation"
+cuba.8.t:0 "쿠바가 카리브 연방에 가입하다"
 cuba.8.d:0 "The island of Cuba has joined our Federation. It will take some time until Cuba is completely integrated into our political system, and the leftist dissenters on Cuba are dealt with. But our influence and power is certainly growing."
-cuba.8.a:0 "Freedom and prosperity for the entire Caribbean!"
+cuba.8.a:0 "모든 카리브해 국가들의 자유와 번영을 위하여!"
 
 cuba.9.t:0 "For the revolution!"
 cuba.9.d:0 "... nobody can see this..."
 cuba.9.a:0 "A free syndicalist country"
 
-cuba.10.t:0 "The Spanish Language"
+cuba.10.t:0 "스페인어"
 cuba.10.d:0 "With Cuba as a member of our federation, almost half of our citizens now speak Spanish as their native language. Currently, our official language is English, but those of our citizens that speak Spanish or french increasingly fear that their culture and heritage is being subdued and ignored."
-cuba.10.a:0 "English will stay the official Language of the Federation"
-cuba.10.b:0 "The federal government will be multilingual!"
+cuba.10.a:0 "계속 영어를 연방의 공식언어로 쓸 것이다"
+cuba.10.b:0 "연방 정부는 다국어를 채택할 것이다!"
 
-cuba.11.t:0 "A free Cuba?"
-cuba.11.d:0 "Should we let Cuba completely free or should we keep their government under our control?"
-cuba.11.a:0 "Cuba will be a completely free nation!"
-cuba.11.b:0 "We better keep them under control!"
+cuba.11.t:0 "쿠바를 해방시킬까요?"
+cuba.11.d:0 "쿠바를 자유롭게 해주거나 계속해서 우리의 통치를 받도록 해야할까요?"
+cuba.11.a:0 "쿠바는 완전히 자유로운 국가가 될 것이다!"
+cuba.11.b:0 "우리 통치아래 있는 것이 훨씬 낫다!"
 
-cuba.12.t:0 "Growing unrest"
+cuba.12.t:0 "증가하는 불안"
 cuba.12.d:0 "Large parts of the Cuban population have become dissatisfied with the Federation's policies. Radical elements have spread vile propaganda that Cuba has become nothing but a Canadian colony. Syndicalists groups have staged demonstrations in Havana, and even acts of sabotage against federal facilities!"
 cuba.12.a:0 "Break up the demonstrations! Not a single inch for the godless Socialists!"
 cuba.12.b:0 "Don't escalate the situation. As long as the majority stays peaceful..."
@@ -185,10 +183,10 @@ cuba.35.t:0 "Incident at the Baía de los Cocinos"
 cuba.35.d:0 "This morning, a yacht sailing under a neutral flag docked in the Baía de los Cocinos (Bay of Pigs) without authorisation from our customs or naval authorities. A Navy patrol boat sent to the scene was greeted with shots, leaving two seaman dead. According to later intelligence reports, the yacht was carrying exiled syndicalist leaders Camilo Cienfuegos and Raúl Castro, plus some fifty other rebels. The group is now gone..."
 cuba.35.a:0 "What the hell is this?"
 
-cuba.36.t:0 "Revolution!"
+cuba.36.t:0 "혁명이다!"
 cuba.36.d:0 "Castro and Cienfuegos have contacted other socialist groups in the major cities of Cuba. Together, they have began to launch a left-wing Revolution in Cuba! They demand the resignation of our government, or we will face the wrath of the people!"
-cuba.36.a:0 "Let them come if they dare"
-cuba.36.b:0 "We can't afford a civil war, resign now"
+cuba.36.a:0 "그렇게 자신있다면 오게 둬라"
+cuba.36.b:0 "내전을 감당할 수 없다, 당장 경질해"
 
 cuba.37.t:0 "The Battle of Santiago de Cuba"
 cuba.37.d:0 "One of our army divisions has encountered a major rebel unit in the outskirts of Santiago de Cuba!"
