--- a/Kaiserreich Korean Translation/localisation/KR_Hungary_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Hungary_l_english.yml
@@ -2,36 +2,36 @@ l_english:
 
 ### Parties ###
 HUN_totalist_party:0 "TP"
-HUN_totalist_party_long:0 "Totalista Párt"
+HUN_totalist_party_long:0 "전체주의당"
 HUN_syndicalist_party:0 "SkP"
-HUN_syndicalist_party_long:0 "Szindikalista Párt"
+HUN_syndicalist_party_long:0 "생디칼리즘당"
 HUN_radical_socialist_party:0 "SlP"
-HUN_radical_socialist_party_long:0 "Szocialista Párt"
+HUN_radical_socialist_party_long:0 "사회당"
 HUN_social_democrat_party:0 "MSZDP"
-HUN_social_democrat_party_long:0 "Magyarországi Szociáldemokrata Párt"
+HUN_social_democrat_party_long:0 "헝가리 사회민주당"
 HUN_social_liberal_party:0 "NSP"
-HUN_social_liberal_party_long:0 "Nemzeti Szabadelvű Párt"
+HUN_social_liberal_party_long:0 "시민자유당"
 HUN_market_liberal_party:0 "NM"
-HUN_market_liberal_party_long:0 "Nemzeti Munkapárt"
+HUN_market_liberal_party_long:0 "국가노동당"
 HUN_social_conservative_party:0 "EP"
-HUN_social_conservative_party_long:0 "Egységes Párt"
+HUN_social_conservative_party_long:0 "통합당"
 HUN_authoritarian_democrat_party:0 "KNEP"
-HUN_authoritarian_democrat_party_long:0 "Keresztény Nemzeti Egyesülés Pártja"
+HUN_authoritarian_democrat_party_long:0 "기독교 국가연합당"
 HUN_paternal_autocrat_party:0 "FKgP"
-HUN_paternal_autocrat_party_long:0 "Független Kisgazda-, Földmunkás- és Polgári Párt"
+HUN_paternal_autocrat_party_long:0 "소규모 자작농, 농민 및 시민의 당"
 HUN_national_populist_party:0 "MEP"
-HUN_national_populist_party_long:0 "Magyar Élet Pártja"
+HUN_national_populist_party_long:0 "헝가리 삶의 당"
 
 ### Events ###
 
 ### Status of Hungary ###
-kr.hungary.1.t:0 "Hungary in 1936"
-kr.hungary.1.d:0 "Before 1914 the Kingdom of Hungary regarded itself as a Great Power in its own right, as it constituted one half of the powerful Habsburg Dual-Monarchy. Victory in the Weltkrieg bought the Kingdom territorial gains at the expense of Serbia and Romania, but not the dominant position in the East that the Hungarians expected. While its agrarian economy has not fared well in the face of cheap grain from the new Eastern Kingdoms (particularly Ukraine), the political troubles in Austria and the weak Imperial authority under the adolescent Emperor Otto has allowed the Magyars to follow a more independent line.A Hungarian national army has been formed, and a new strain of aggressive and expansionist nationalism, determined to 'Magyarise' the divided peoples of the Balkans, has come to the fore of Hungarian politics. While German meddling in 1927 prevented the Hungarians from cementing their dominant position in the Dual Monarchy, the next Ausgleich renegotiation should be the time when the whole of the Crown Lands of St. Stephen will finally be restored to the Magyar nation."
-kr.hungary.1.a:0 "Okay."
+kr.hungary.1.t:0 "1936년 헝가리"
+kr.hungary.1.d:0 "1914년 이전까지 헝가리 왕국을 자신을 열강이라고 여겼는데, 헝가리가 강력한 합스부르크 이중 제국의 절반을 이루고 있었기 때문입니다. 세계 대전에서의 승리로 헝가리는 세르비아와 루마니아로부터 영토를 얻었지만, 헝가리가 기대했던 동부에서의 지배적인 위치는 얻지 못했습니다. 헝가리의 농업이 동쪽의 새로운 왕국들(특히 우크라이나)에서 오는 값싼 곡물에 직면해 그리 좋은 상황이 아닌 가운데, 오스트리아의 정치적 문제와 청년 황제 오토의 약한 권위로 헝가리는 좀 더 독립적인 노선을 걸어가게 되었습니다. 헝가리 국군이 창설되었고, 발칸 반도의 분단된 민족을 '헝가리화'하고자 하는 공격적이고 팽장주의적인 민족주의의 새로운 흐름이 헝가리 정치의 선두에 섰습니다. 1927년에 독일은 헝가리가 이중 제국에서 지배적인 위치를 공고히 하는 것을 막았지만, 다음 대타협은 성 이슈트반의 모든 소유지가 헝가리로 편입된 후에 일어나야 합니다."
+kr.hungary.1.a:0 "알겠다."
 
 ### Austria civil war ###
-kr.hungary.2.t:0 "A new leader"
-kr.hungary.2.d:0 "The moment war was declared against our former suppressor Austria we needed a new leader for our Government. He will lead us to victory!"
-kr.hungary.2.a:0 "István Bethlen leads the nation"
+kr.hungary.2.t:0 "새로운 지도자"
+kr.hungary.2.d:0 "오스트리아의 억압에 맞서 잠깐 동안의 전쟁이 선포되었습니다. 우리 정부에는 새로운 지도자가 필요합니다. 그가 우리를 승리로 이끌 것입니다!"
+kr.hungary.2.a:0 "이슈트반 베틀렌이 나라를 이끌 것이다."
 
 
