--- a/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Countries_l_english.yml
@@ -7401,8 +7401,8 @@ WHR_social_conservative_ADJ:0 "벨라루스"
 WHR_social_conservative_DEF:0 "벨라루스"
 WHR_authoritarian_democrat:0 "백루테니아"
 WHR_authoritarian_democrat_ADJ:0 "루테니아"
-WHR_authoritarian_democrat_DEF:0 "백테니아"
-WHR_paternal_autocrat:0 "백테니아"
+WHR_authoritarian_democrat_DEF:0 "백루테니아"
+WHR_paternal_autocrat:0 "백루테니아"
 WHR_paternal_autocrat_ADJ:0 "루테니아"
 WHR_paternal_autocrat_DEF:0 "백루테니아"
 WHR_national_populist:0 "백루테니아"
