--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -675,7 +675,7 @@ MAF_Vizekonig:0 "'부왕'의 직위를 확보하다"
 MAF_Vizekonig_desc:0 "The Statthalter is not merely a bureaucrat fulfilling a government role. We have already established that he is not accountable to Germany, and it is now important to establish that he is co-equal to the highest authority in Africa. The Kaiser has given the Vizekönig a sacred trust. In Africa, the Vizekönig's word is the same as the Kaiser's."
 MAF_Four_Year_Plan:0 "4개년 계획"
 MAF_Four_Year_Plan_desc:0 "Trouble is brewing in Europe and Asia, the syndicalists grow bolder every day while our own military has become complacent. We must plan a timetable for our economy and military to ensure that we are ready to support the Fatherland in any way possible."
-MAF_Die_Volkerschau:0 "Die Neue Völkerschau"
+MAF_Die_Volkerschau:0 "새로운 Völkerschau"
 MAF_Die_Volkerschau_desc:0 "Building on the techniques of Carl Hagenbeck in the early 20th century, we can put together the world's greatest (and most profitable) ethnological exposition in the world. With over 1,000 performers, it will be sure to bring in a profit, while still serving the public diplomacy of our administration."
 MAF_Protect_Animals:0 "Protected Endangered Species"
 MAF_Protect_Animals_desc:0 "It's incredulous to think, but some of the most iconic species of Africa, particularly the lion, are in danger of being totally exterminated, as the wolf was from Europe. In 1870, the last Atlas Bear was shot by hunters. Our Statthalter has a particular interest in pushing laws that ensure this will not happen to our native species."
