--- a/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Mittelafrika_l_english.yml
@@ -715,33 +715,33 @@ MAF_Honorary_Officers:0 "명예 사관들"
 MAF_Honorary_Officers_desc:0 "The core of our authority are the Askari, who obey without question, and the local authorities who can effectively administrate our territories. We should blend the two by adopting Kings and Chieftains as honorary officers in our armed forces."
 MAF_African_Studies:0 "독일에서의 아프리카 연구 증대"
 MAF_African_Studies_desc:0 "The official language of our administration is Swahilli, but there are few opportunities to learn it elsewhere, not to mention the hundreds of other native languages used in Africa. To have a steady supply of competent administrators, we should encourage German universities to train specialists in African languages and cultures."
-MAF_Bezirk:0 "Bezirksleiterrecht"
+MAF_Bezirk:0 "법적 지역 관리자"
 MAF_Bezirk_desc:0 "Much of the law that ordinary Africans operate and face trial under is not German law, but local tribal laws, arbitrated by tribal leaders and elders. Rather than trying to stamp it out and flood our limited number of acceptable judges, lawyers and jurors, Rudolf Asmis has proposed we have teams of legal experts consult with the locals to put into writing and modernise their local laws."
-MAF_Strategic_Reserve:0 "Strategic Resources Reserve"
+MAF_Strategic_Reserve:0 "전략 자원 비축"
 MAF_Strategic_Reserve_desc:0 "In the last war, cut off from Germany, we had to improvise our own supplies. We found ways to manufacture torpedoes, artillery shells, dyes, liquors and foodstuffs out of practically nothing. We should perpetuate this tradition, and find ways to improvise the manufacture of goods if we are cut off from the Fatherland again."
-MAF_Cash_Crops:0 "Cash Crops Exports"
+MAF_Cash_Crops:0 "현금 작물 수출"
 MAF_Cash_Crops_desc:0 "It is no secret that the quest for exotic goods has always been a driver of imperialism. Many tropical crops can grow in the Sub-Saharan environment such as coffee and cocoa. We should focus on these rather than staples, importing food from Ukraine or East Prussia to make up for any imbalances."
-MAF_East_Asian_Exports:0 "East Asian Exports"
+MAF_East_Asian_Exports:0 "동아시아로의 수출"
 MAF_East_Asian_Exports_desc:0 "We are only a part of Germany's vast colonial empire. We should make sure our trade doesn't only go to the metropole, but takes advantage of oppurtunities in the Orient."
-MAF_Cottage_Industries:0 "Cottage Industries"
+MAF_Cottage_Industries:0 "면직 산업"
 MAF_Cottage_Industries_desc:0 "It's strange to think, but even in the 20th century a great deal of work can be done by distributing work to the vast numbers of skilled Africans throughout the continent, many of them traditionally trained blacksmiths, in order to increase our production."
-MAF_African_Army:0 "An African Army"
+MAF_African_Army:0 "아프리카인 군대"
 MAF_African_Army_desc:0 "We should never forget that our Askari are trained to secure and defend Africa. To this end, we require light infantry capable of operating in the brush and jungle on low supply."
-MAF_Airforce_Infantry:0 "Establish the Air Mobile Infantry"
+MAF_Airforce_Infantry:0 "항공기동부대의 창설"
 MAF_Airforce_Infantry_desc:0 "Ludwig von Bockholt, one of the main members of the DKG administration, has always been a daring innovator in air combat. His newest innovation: aerial deployment and resupply of full divisions."
-MAF_Improve_Logistics:0 "Improve our Logistics"
+MAF_Improve_Logistics:0 "군수 보급의 향상"
 MAF_Improve_Logistics_desc:0 "During the Weltkrieg, we required over 200,000 porters to supply a force of only 18,000 soldiers. This drained our food supplies and reduced our mobility to the rate at which humans can carry artillery. We cannot allow this to happen again."
-MAF_Spirit_Vorbeck:0 "The Spirit of von Lettow-Vorbeck"
+MAF_Spirit_Vorbeck:0 "폰 레토프-포르벡의 정신"
 MAF_Spirit_Vorbeck_desc:0 "The most important lesson of the Weltkrieg cannot be found in any technical manual. It is exemplified in the sheer determination of General von Lettow-Vorbeck to continue fighting no matter how dire the situation might have appeared. In 1916, the Entente declared the situation in Africa over. In 1921 we were still standing, and still fighting. We never gave up, and we never will!"
-MAF_Electronic_Project:0 "Electronic Intelligence Project"
+MAF_Electronic_Project:0 "전자정보 계획"
 MAF_Electronic_Project_desc:0 "Mittelafrika is not suited for a large navy, our shores are too large to protect and our industry would be better spent on other things. One such other thing is investment in electronics technology, which will give us the ability to project power from Africa and help our Fatherland through intelligence gathering."
-MAF_Konigsburg_Gunners:0 "The Königsberg Gunners"
+MAF_Konigsburg_Gunners:0 "쾨니히스베르크 포술장"
 MAF_Konigsburg_Gunners_desc:0 "The Weltkrieg did not see much naval warfare in Africa, aside from some lake battles using improvised steamers. The key battle was the Battle of the Rufiji Delta, where the SMS Königsberg was severly damaged. However, the crew salvaged the guns before scuttling the ship, and served as artillery and infantry officers. Given such unique experiences, it is no wonder that some of our naval officers, such as Richard Wenig, have become experts in naval infatry tactics."
-MAF_Naval_Aerial_Observation:0 "Naval Aerial Observation"
+MAF_Naval_Aerial_Observation:0 "해상 항공정찰"
 MAF_Naval_Aerial_Observation_desc:0 "Building on the strengh of standing astride many naval lanes, we should improve on our observation and interdiction ability with naval aircraft. Previously, these operations were conducted via dirigibles commanded by Commodore Bockholt, but advances in technology mean long range aircraft and flying boats are now the key. Conventional German naval aircraft are designed with the rather short ranges of the North Sea in mind. We must develop our facilities to modify planes to suit our own needs."
-MAF_Our_Shipyards:0 "Our Own Shipyards"
+MAF_Our_Shipyards:0 "우리 소유의 조선소"
 MAF_Our_Shipyards_desc:0 "Our current policy of adapting and refitting outdated ships from the Kaiserliche Marine is both costly and ineffective. The ships we receive are too slow for modern vessels and are in frequent need of costly repairs. Instead of large, rusting cruisers, we should be focusing on state of the art destroyers and U-Boats to keep our operating costs low."
-MAF_African_Landtag:0 "An African Landtag"
+MAF_African_Landtag:0 "아프리카 의회"
 MAF_African_Landtag_desc:0 "Rather than all power residing in the Statthalter, we shall have two branches of legistlature, a Harrenhause made up of German noblemen and African kings, and a Abgeordnetenhaus, decided on by mainly white voters."
 MAF_Reform_Schutztruppe:0 "Reform the Schutztruppe"
 MAF_Reform_Schutztruppe_desc:0 "For too long our Schutztruppe have operated in military fashion despite not being part of the German military. Though they displayed outstanding bravery during the Weltkrieg, they are a police force, not an occupying army. It's time they acted like it."
