--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -403,21 +403,21 @@ RUS_social_conservative_party:0 "RS"
 RUS_authoritarian_democrat_party:0 "OK"
 RUS_paternal_autocrat_party:0 "ROVS"
 RUS_national_populist_party:0 "NRPR"
-RUS_totalist_party_long:0 "인민 해방당"
-RUS_radical_socialist_party_long:0 "인민 사회당"
+RUS_totalist_party_long:0 "인민해방당"
+RUS_radical_socialist_party_long:0 "인민사회당"
 RUS_syndicalist_party_long:0 "볼셰비키"
 RUS_social_democrat_party_long:0 "멘셰비키"
-RUS_social_liberal_party_long:0 "사회 혁명당"
-RUS_market_liberal_party_long:0 "헌법 민주당"
+RUS_social_liberal_party_long:0 "사회혁명당"
+RUS_market_liberal_party_long:0 "입헌민주당"
 RUS_social_conservative_party_long:0 "러시아 연방"
 RUS_authoritarian_democrat_party_long:0 "10월당"
 RUS_paternal_autocrat_party_long:0 "러시아 전 연방"
 RUS_national_populist_party_long:0 "러시아 인민 공화당"
 RUS_mensheviks_party:0 "멘셰비키"
 RUS_social_rev_party:0 "PSR"
-RUS_social_rev_party_long:0 "사회 혁명당"
+RUS_social_rev_party_long:0 "사회혁명당"
 RUS_social_lib_party:0 "SLP"
-RUS_social_lib_party_long:0 "사회 자유당"
+RUS_social_lib_party_long:0 "사회자유당"
 RUS_social_cons_party:0 "민주당"
 RUS_social_cons_party_long:0 "민주당"
 RUS_auth_dem_party:0 "실로비키"
