--- a/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_World_News_l_english.yml
@@ -63,7 +63,7 @@ worldnews.15.t:0 "케렌스키 대통령 암살"
 worldnews.15.d:0 "케렌스키는 상원에가는 길에 총에 맞아 죽었습니다! 가해자는 경찰에 의해 체포됬지만 공격자의 목표와 의도는 알 수 없습니다. 케렌스키가 어설픈 토지 개혁과 비효율적인 통치로 인해 러시아 국민들에게 인기를 얻지 못했음에도 불구하고 수년간 이 나라를 하나로 이끌었으며, 그의 죽음은 러시아를 혼란에 빠뜨렸습니다. 상원 의원은 케린스키의 대체자에 대해 이미 논의하고 있으며, 좌파와 우파 양측 모두 새로운 연합이 형성되고있는 반면, Denikin, Wrangel, Kornilov 같은 군인들은 민주주의를 해산하고 'Mother Russia'를 지키기위해 위해 개입을 준비하고 있습니다..."
 worldnews.15.a:0 "야만적이군!"
 
-worldnews.16.t:0 "Platinean 전쟁"
+worldnews.16.t:0 "플라타 전쟁"
 worldnews.16.d:0 "1930년대의 대 남미 전쟁이 끝나고 남아메리카에는 브라질과 아르헨티나라는 두 지역 강대국이 생겨났고, 후자는 라 플라 타 연맹으로 진화했습니다. 이 두 거인들과, 이제 남미 지배를 위한 경쟁자로 바뀐 이전 전쟁의 적들과 긴장감은 지난 수년동안 상승해왔고, 파라과이와 볼리비아에 대한 라 플라타의 승리는 긴장을 완화시키는데 별로 도움이 되지 못했습니다. \n\n남아메리카의 불안한 평화는 약화된 미국이 멈추지 못하는, 양국간의 명백한 전쟁의 시작으로 마침내 무너졌습니다. 라 플라타는 두 번째 승리에 자신감을 가지고 있지만, 브라질은 지난번의 패배를 복수 할 준비가 되어 있습니다 ..."
 worldnews.16.a:0 "골치 아픈 사건이 터졌군.."
 
